# buildbar

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: BUILD.bazel  main.yaml  publish-meroton-docker.yaml  pull-requests.yaml
cmd/bb_build_event_service/: BUILD.bazel  main.go
cmd/bb_completed_actions_ingester/: BUILD.bazel  main.go
cmd/bb_slow_generic_runner/: BUILD.bazel  main.go
internal/mock/: BUILD.bazel
internal/mock/aliases/: BUILD.bazel  aliases.go
patches/org_golang_google_genproto/: service-registrar.diff
pkg/bazelevents/: BUILD.bazel  bazel_event_server.go  blob_store_writer.go  converter.go  converter_test.go  ingester.go  ingester_test.go
pkg/bazelevents/testdata/: golden.bep.ndjson  golden.documents.json
pkg/buildevents/: BUILD.bazel  bazel_event_processor.nogo  bazel_event_server.go  bazel_event_server.nogo  bazel_event_server_test.go  buffered_bes.go  buffered_bes_test.go  build_event_server.go  configuration.go  converter.go  error_annotated_bes.go  error_annotated_bes_test.go  error_ignoring_bes.go  error_ignoring_bes_test.go  grpc_client.go  grpc_server.go  grpc_server_test.go  ingester.go  multiplexing_bes.go  multiplexing_bes_test.go  redacting_bes.go  redacting_bes_test.go  relay.go  relay_test.go  stream_id.go
pkg/buildevents/configuration/: BUILD.bazel  build_event_server_creator.go
pkg/completedaction/: BUILD.bazel  converter.go  converter_test.go  ingester.go  ingester_test.go
pkg/elasticsearch/: BUILD.bazel  elasticsearch.go  uploader.go  uploader_test.go
pkg/proto/configuration/bb_completed_actions_ingester/: BUILD.bazel  bb_completed_actions_ingester.pb.go  bb_completed_actions_ingester.proto
pkg/proto/configuration/bb_slow_generic_runner/: BUILD.bazel  bb_slow_generic_runner.pb.go  bb_slow_generic_runner.proto
pkg/proto/configuration/elasticsearch/: BUILD.bazel  elasticsearch.pb.go  elasticsearch.proto
pkg/runner/: BUILD.bazel  command_wrapper.go  readiness_command_runner.go
pkg/util/: BUILD.bazel  errgroup.go  proto_to_json.go
proto/bazelbuild/bazel/: BUILD.bazel  action_cache.pb.go  build_event_stream.pb.go  command_line.pb.go  command_line.proto  download.sh  failure_details.pb.go  invocation_policy.pb.go  option_filters.pb.go  option_filters.proto  package_load_metrics.pb.go
proto/configuration/bb_build_event_service/: BUILD.bazel  bb_build_event_service.pb.go  bb_build_event_service.proto
proto/configuration/bb_completed_actions_ingester/: BUILD.bazel  bb_completed_actions_ingester.pb.go  bb_completed_actions_ingester.proto
proto/configuration/bb_slow_generic_runner/: BUILD.bazel  bb_slow_generic_runner.pb.go  bb_slow_generic_runner.proto
proto/configuration/buildevents/: BUILD.bazel  buildevents.pb.go  buildevents.proto
proto/configuration/elasticsearch/: BUILD.bazel  elasticsearch.pb.go  elasticsearch.proto
tools/: BUILD.bazel  append_proto_write_source_targets.sh  container.bzl  deps.go  workspace-status.sh
tools/github_workflows/: BUILD.bazel  github_workflows.jsonnet  workflows_template.libsonnet
