load("@com_github_buildbarn_bb_storage//tools:container.bzl", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:push.bzl", "image_push")

go_library(
    name = "bb_completed_actions_ingester_lib",
    srcs = ["main.go"],
    importpath = "github.com/meroton/buildbar/cmd/bb_completed_actions_ingester",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/completedaction",
        "//pkg/elasticsearch",
        "//pkg/proto/configuration/bb_completed_actions_ingester",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/completedactionlogger",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_buildbarn_bb_storage//pkg/zstd",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_completed_actions_ingester",
    embed = [":bb_completed_actions_ingester_lib"],
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_completed_actions_ingester_container",
    binary = ":bb_completed_actions_ingester",
)

image_push(
    name = "bb_completed_actions_ingester_container_push",
    image = ":bb_completed_actions_ingester_container",
    registry = "ghcr.io",
    repository = "meroton/bb-completed-actions-ingester",
    tag_file = "@com_github_buildbarn_bb_storage//tools:stamped_tags",
    # Don't build container image unless explicitly requested, as
    # building all variants can be time-consuming.
    tags = ["manual"],
)

image_push(
    name = "bb_completed_actions_ingester_container_push_meroton",
    image = ":bb_completed_actions_ingester_container",
    registry = "273354657929.dkr.ecr.eu-central-1.amazonaws.com",
    repository = "meroton/buildbarn/bb-completed-actions-ingester",
    tag_file = "@com_github_buildbarn_bb_storage//tools:stamped_tags",
    # Don't build container image unless explicitly requested, as
    # building all variants can be time-consuming.
    tags = ["manual"],
)
