load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_slow_generic_runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/meroton/buildbar/cmd/bb_slow_generic_runner",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/runner",
        "//proto/configuration/bb_slow_generic_runner",
        "@com_github_buildbarn_bb_remote_execution//pkg/cleaner",
        "@com_github_buildbarn_bb_remote_execution//pkg/filesystem",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/runner",
        "@com_github_buildbarn_bb_remote_execution//pkg/runner",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_slow_generic_runner",
    embed = [":bb_slow_generic_runner_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
