load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bazelevents",
    srcs = [
        "converter.go",
        "ingester.go",
    ],
    importpath = "github.com/meroton/buildbar/pkg/bazelevents",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/buildevents",
        "//pkg/elasticsearch",
        "//pkg/util",
        "//third_party/bazel:build_event_stream",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_kballard_go_shellquote//:go-shellquote",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_genproto//googleapis/devtools/build/v1:build",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "bazelevents_test",
    srcs = [
        "converter_test.go",
        "ingester_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        ":bazelevents",
        "//internal/mock",
        "//pkg/buildevents",
        "//third_party/bazel:build_event_stream",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_genproto//googleapis/devtools/build/v1:build",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_mock//gomock",
    ],
)
