load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "buildevents",
    srcs = ["relay.go"],
    importpath = "github.com/meroton/buildbar/pkg/buildevents",
    visibility = ["//visibility:public"],
)

go_test(
    name = "buildevents_test",
    srcs = ["relay_test.go"],
    deps = [
        "//internal/mock",
        "//pkg/completedaction",
        "@com_github_buildbarn_bb_remote_execution//pkg/proto/completedactionlogger",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
