load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "buildevents",
    srcs = [
        "bazel_event_server.go",
        "buffered_bes.go",
        "build_event_server.go",
        "configuration.go",
        "error_annotated_bes.go",
        "error_ignoring_bes.go",
        "grpc_client.go",
        "grpc_server.go",
        "multiplexing_bes.go",
        "redacting_bes.go",
        "stream_id.go",
    ],
    importpath = "github.com/meroton/buildbar/pkg/buildevents",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bazelevents",
        "//pkg/elasticsearch",
        "//pkg/util",
        "//proto/configuration/buildevents",
        "//third_party/bazel:build_event_stream",
        "//third_party/buildbuddy/server/util/redact",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_golang_protobuf//ptypes/empty",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_genproto//googleapis/devtools/build/v1:build",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sync//semaphore",
    ],
)

go_test(
    name = "buildevents_test",
    srcs = [
        "bazel_event_server_test.go",
        "buffered_bes_test.go",
        "error_annotated_bes_test.go",
        "error_ignoring_bes_test.go",
        "grpc_server_test.go",
        "multiplexing_bes_test.go",
        "redacting_bes_test.go",
    ],
    deps = [
        ":buildevents",
        "//internal/mock",
        "//third_party/bazel:build_event_stream",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_genproto//googleapis/devtools/build/v1:build",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
        "@org_golang_google_grpc//test/bufconn",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
